src/test/deca/codegen/extension/invalid/created/ArithmeticExp2.deca
// Description:
//    Division par 0 (par modulo)
// Resultats:
//    Error: division by 0

{
    int a = 3 % 0;
}